# crewai-custom-template

./: LICENSE  README.md
lessoncraftai/: .gitignore  README.md  crew.py  crew.yaml  main.py  pyproject.toml  requirements.txt
lessoncraftai/agents/: assessment_designer.py  curriculum_ingestor.py  enhancer.py  lesson_planner.py  topic_analyzer.py
lessoncraftai/tools/: analyze_topics.py  design_assessments.py  enhance_lessons.py  plan_lessons.py  vectorize_pdf.py
